--- a/style.css
+++ b/style.css
@@ -4,42 +4,59 @@
 }
 
 body {
-  background-color: rgb(193, 161, 85);
+  background-color: rgb(43, 43, 43);
+}
+
+.cabecalho {
+  background: linear-gradient(to right, #cbaa49 , #fcdc95)
+}
+
+.container {
+  box-sizing: border-box;
+  max-width: 960px;
+  height: 100vh;
+  margin: 0 auto;
 }
 
 h1 {
+  padding-top: 40px;
+  padding-bottom: 40px;
   text-align: center;
-  margin-top: 50px;
   margin-bottom: 30px;
-  color: rgb(255, 238, 3);
-  text-shadow: 1px 1px 2px rgb(149, 148, 148);
+  color: #736323;
+  
 }
 
 h2 {
   margin-bottom: 20px;
   margin-left: 30px;
-  color: rgb(41, 40, 40);
+  color: #debe5c;
 }
 
 p {
+  width: 600px;
   margin-bottom: 5px;
   margin-left: 40px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.08rem;
   font-weight: 500;
-  color: rgb(56, 56, 56);
+  color: #e4e4e4;
   max-width: 800px;
 }
 
 ol {
   margin: 80px;
   margin-top: 20px;
-  color: rgb(41, 40, 40);
+  color: #e4e4e4;
+}
+
+li {
+  margin-bottom: 8px;
 }
 
 a {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   text-decoration: none;
-  color: rgb(255, 238, 3);
-  text-shadow: 1px 1px 2px rgb(149, 148, 148);
+  color: #debe5c;
+  font-weight: bolder;
 }
