--- a/style.css
+++ b/style.css
@@ -9,11 +9,10 @@ body {
 
 .cabecalho {
   width: 100%;
-  background: linear-gradient(to right, #cbaa49 , #fcdc95)
+  background: linear-gradient(to right, #cbaa49 , #fcdc95);
 }
 
 .container {
-  box-sizing: border-box;
   max-width: 960px;
   height: 100vh;
   margin: 0 auto;
@@ -29,15 +28,16 @@ h1 {
 }
 
 h2 {
-  margin-bottom: 20px;
-  margin-left: 30px;
+  margin-left: 20px;
+  margin-bottom: 15px;
   color: #debe5c;
 }
 
 p {
-  width: 600px;
-  margin-bottom: 5px;
-  margin-left: 40px;
+  padding: 0 10px;
+  box-sizing: border-box;
+  margin-left: 10px;
+  margin-bottom: 10px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.08rem;
   font-weight: 500;
@@ -46,8 +46,8 @@ p {
 }
 
 ol {
-  margin: 80px;
   margin-top: 20px;
+  margin-left: 50px;
   color: #e4e4e4;
 }
 
