adiconado modo touch para o projeto drum

--- a/01-javascript_drum_kit/style.css
+++ b/01-javascript_drum_kit/style.css
@@ -49,3 +49,10 @@ kbd {
   letter-spacing: .1rem;
   color: #ffc600;
 }
+
+@media (max-width: 500px) {
+  .keys {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
