--- a/30-whack-a-mole/style.css
+++ b/30-whack-a-mole/style.css
@@ -1,7 +1,8 @@
 html {
   box-sizing: border-box;
   font-size: 10px;
-  background: #dfb004;
+  background-image: linear-gradient(to bottom, #dfb004, #b48a01, #7c5102);
+  background-repeat: no-repeat;
 }
 
 body {
@@ -20,11 +21,15 @@ h1 {
 button {
   display: block;
   margin: 16px auto 0 auto;
-  padding: 8px;
+  padding: 10px;
   border-radius: 4px;
-  background-color: #8d6f02;
+  background-color: #ffc800;
   color: #2b2201;
   font-weight: bolder;
+  cursor: pointer;
+}
+button:hover {
+  box-shadow: 2px 2px 4px #a18522;
 }
 
 .score {
@@ -36,10 +41,11 @@ button {
 
 .game {
   width: 600px;
-  height: 400px;
+  height: 480px;
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
+  padding-bottom: 30px;
 }
 
 .hole {
@@ -54,7 +60,7 @@ button {
   background-size: contain;
   content: '';
   width: 100%;
-  height:70px;
+  height: 70px;
   position: absolute;
   z-index: 2;
   bottom: -30px;
@@ -62,7 +68,7 @@ button {
 
 .mole {
   background: url('mole.svg') bottom center no-repeat;
-  background-size: 60%;
+  background-size: 76%;
   position: absolute;
   top: 100%;
   width: 100%;
@@ -75,13 +81,20 @@ button {
 }
 
 @media (max-width: 520px) {
+ 
   h1 {
-    font-size: 1rem;
+    font-size: 3.4rem;
   }
-  .score {
-    background: blue;
-    padding: 0rem;
-    line-height: 1;
-    border-radius: 0rem;
+  .game {
+    max-width: 100vw;
+    max-height: 100%;
+    flex-wrap: wrap;
+    
   }
+  .hole:after {
+    width: 90%;
+    height: 60px;
+    bottom: -30px;
+  }
+ 
 }
