--- a/30-whack-a-mole/style.css
+++ b/30-whack-a-mole/style.css
@@ -87,7 +87,7 @@ button:hover {
   }
   .game {
     max-width: 100vw;
-    max-height: 100%;
+    max-height: 100vh;
     flex-wrap: wrap;
     
   }
